--- a/stikbook-frontend/src/components/home/interest.css
+++ b/stikbook-frontend/src/components/home/interest.css
@@ -1,8 +1,6 @@
 .main{
     background-color: white;
     width: 100vw;
-    height: 760px;
-    margin-left: calc(-50vw + 50%);
 }
 .pictures{
     margin-top: 20px;
@@ -10,13 +8,11 @@
    
     
 }
-.placeholder{
-    width: 260px;
-    border-radius: 15px;
-}
-#searchbar{
+
+.searchbar{
     width: 280px;
     border-radius: 5px;
+    padding: 5px;
 }
 .headings{
     text-align: center;
@@ -55,4 +51,7 @@
 }
 .sub-heading{
     text-align: center;
+}
+.interestButton{
+    padding: 20px;
 }
