--- a/stikbook-frontend/src/index.css
+++ b/stikbook-frontend/src/index.css
@@ -1,21 +1,6 @@
-@import url('https://fonts.googleapis.com/css?family=Fira+Sans:400,500,600,700,800');
-
-* {
-  box-sizing: border-box;
-}
-body {
-  min-height: 100vh;
-  display: flex;
-  font-weight: 400;
-  font-family: 'Fira Sans', sans-serif;
-  /* The image used */
-  background-image: url("./assets/images/login_bg.jpg");
-  /* Full height */
-  height: 100%;
-  /* Center and scale the image nicely */
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
+@import url('https://fonts.googleapis.com/css2?family=Abel&family=Dosis:wght@400;500&family=Roboto&display=swap');
+*{
+  font-family: 'Roboto', sans-serif;
 }
 .stikBookLogo{
   height: 85px;
@@ -34,85 +19,7 @@ body {
   z-index: 1000;
   cursor: pointer;
 }
-hr {
-  border: none;
-  height: 1px !important;
-  /* Set the hr color */
-  color: #DDA14B; /* old IE */
-  background-color: #DDA14B; /* Modern Browsers */
-}
-h1,h2,h3,h4,h5,h6,label,span {
-  font-weight: 500;
-  font-family: 'Fira Sans', sans-serif;
-}
 
-body, html, .App, #root, .auth-wrapper {
-  width: 100%;
-  height: 100%;
-}
 
-.navbar-light {
-  background-color: #ffffff;
-  box-shadow: 0px 14px 80px rgba(34, 35, 58, 0.2);
-}
-
-.auth-wrapper {
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  text-align: left;
-}
-
-.auth-inner {
-  width: 450px;
-  margin: auto;
-  background: #ffffff;
-  box-shadow: 0px 14px 80px rgba(34, 35, 58, 0.2);
-  padding: 35px 45px 35px 45px;
-  border-radius: 15px;
-  transition: all .3s;
-}
-
-.auth-wrapper .form-control:focus {
-  border-color: #167bff;
-  box-shadow: none;
-}
-.btn-primary{
-  
-}
-.auth-wrapper h3 {
-  text-align: center;
-  margin: 0;
-  line-height: 1;
-  padding-bottom: 20px;
-}
-
-.custom-control-label {
-  font-weight: 400;
-}
-
-.forgot-password,
-.forgot-password a {
-  text-align: right;
-  font-size: 13px;
-  padding-top: 10px;
-  color: #7f7d7d;
-  margin: 0;
-}
-
-.forgot-password a {
-  color: #167bff;
-}
-
-.btn-link.btn-primary, .btn-primary:hover, .btn-primary:active, .btn-primary:visited {
-  background-color: #DDA14B !important;
- 
-}
-.btn-link {
-  margin-top: 25px;
-  background-color: #DDA14B !important;
-  border-color: none !important;
-  color: white !important;
-}
 
 
