Updated few UI for few pages

--- a/stikbook-frontend/src/assets/styles/commonstyle.css
+++ b/stikbook-frontend/src/assets/styles/commonstyle.css
@@ -34,3 +34,10 @@ html,
 .forgot-password a {
   color: #DDA14B;
 }
+
+.form-control{
+    background-color: #f1f1f1a3;
+ 
+}
+.input-group>.custom-select:not(:last-child), .input-group>.form-control:not(:last-child) {   border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;}
